bkp/sg.tf
resource "aws_security_group" "sgweb" {
  name        = "sgweb"
  description = "Allow SSH inbound traffic"
  vpc_id      = aws_vpc.xablau.id

  ingress {
    description      = "SSH"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    
  }

  egress {
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
   
  }

  tags = {
    Name = "sgweb"
  }
}
